# iot-insights-engine

./: .renovaterc.json5  Dockerfile  README.md  pyproject.toml
.github/workflows/: auto-release.yaml  ci.yaml  release.yaml
src/iot_insights_engine/: __main__.py  artifacts.py  clear.py  config.py  db_write.py  detect_knx_join.py  detect_pv_underperformance.py  detect_univariate.py  energy_balance.py  forecast_solar.py  forecast_weather.py  iforest_common.py  logging_setup.py  nats_publisher.py  registry.py  score_iforest.py  score_seasonal.py  seasonal_common.py  severity.py  train_iforest.py  train_seasonal.py  weekly_report.py
tests/: test_config_jobs.py  test_detect_univariate.py  test_energy_balance.py  test_forecast_solar.py  test_forecast_weather.py  test_iforest.py  test_knx_join.py  test_nats_publisher.py  test_pv_underperformance.py  test_registry.py  test_score_seasonal.py  test_seasonal.py  test_severity.py  test_weekly_report.py
