[project]
name = "iot-insights-engine"
version = "1.10.0"
description = "TSDB-backed background jobs: anomaly detection (z-score, IsolationForest, KNX-joins), seasonal forecasting (statsforecast), external forecast pulls (Forecast.Solar). Companion to iot-mcp-bridge — owns all writes to mcp_anomalies + mcp_forecasts."
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.13"
authors = [
    { name = "Alexander Zimmermann" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "httpx>=0.28.1",
    "scikit-learn>=1.9.0",
    "statsforecast>=2.0.3",
    "joblib>=1.5.3",
    "boto3>=1.43.39",
    "pandas>=3.0.4",
    "numpy>=2.4.6",
    "nats-py[nkeys]>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
iot-insights-engine = "iot_insights_engine.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iot_insights_engine"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# psycopg's dict_row factory returns dicts at runtime but the stubs
# don't express that. Same disable-set as iot-mcp-bridge had.
module = [
    "iot_insights_engine.db_write",
    "iot_insights_engine.detect_univariate",
]
disable_error_code = ["call-overload", "attr-defined", "index", "dict-item", "assignment", "arg-type"]

[[tool.mypy.overrides]]
# ML / NATS / S3 deps don't publish PEP 561 stubs.
module = [
    "nats",
    "joblib",
    "boto3",
    "botocore.client",
    "sklearn.*",
    "statsforecast",
    "statsforecast.*",
    "pandas",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportAttributeAccessIssue = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportReturnType = "none"
# statsforecast returns either polars or pandas DataFrames depending
# on installed deps; the union confuses Pylance's __getitem__ check.
reportIndexIssue = "none"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
